--- a/public/index.html
+++ b/public/index.html
@@ -309,7 +309,10 @@
   <header>
     <div class="typewriter"><h1>Hola, soy Jimmy Rebatta</h1></div>
     <p data-aos="fade-up" style="color: #aaa;">Apasionado por la lógica y la programación. 20 años. Soñando en grande.</p>
-    <a href="#" class="cv-btn"><i class="fa-solid fa-download"></i> Descargar CV</a>
+    <a href="Jimmy_Rebatta_CV.pdf" target="_blank" class="cv-btn">
+  <i class="fa-solid fa-download"></i> Ver CV
+</a>
+
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
       <a href="#motivacion">¿Por qué programo?</a>
