--- a/public/index.html
+++ b/public/index.html
@@ -374,16 +374,13 @@
   <div class="card" style="text-align: center;">
     <p><strong>SCRUM Fundamentals</strong> - SCRUMstudy (2024)</p>
 <img src="certificado_scrum.png"
-     alt="Certificado PHP"
-     style="margin-top: 25px; max-width: 100%; height: auto; border-radius: 15px; box-shadow: 0 0 12px rgba(0, 247, 255, 0.5); margin-bottom: 10px;">    <a href="certificado_scrum.pdf" target="_blank" class="cv-btn">
+     alt="Certificado Scrum"
+     style="margin-top: 25px; max-width: 100%; height: auto; border-radius: 15px; box-shadow: 0 0 12px rgba(0, 247, 255, 0.5); margin-bottom: 10px;">    
+     <a href="certificado_scrum.pdf" target="_blank" class="cv-btn">
       <i class="fa-solid fa-file-pdf"></i> Ver Certificado PDF
     </a>
   </div>
 </section>
-
-
-
-
 
   <section id="proyectos" data-aos="zoom-in">
     <h2>🚀 Proyectos</h2>
